path negeri - ištrinta

--- a/BeatMaker.ipynb
+++ b/BeatMaker.ipynb
@@ -2,194 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "7b8e1cfa-b84c-40a1-953a-a9cf80b30ef2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.1.2 (SDL 2.0.18, Python 3.10.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pygame\n",
-    "from pygame import mixer\n",
-    "import sqlite3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "123bdd8e-590f-4601-aee8-f860f41af018",
+   "execution_count": 1,
+   "id": "68040aee-5959-424e-938e-b540d342b097",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "pygame.init()\n",
-    "\n",
-    "WIDTH = 1400\n",
-    "HEIGHT = 800\n",
-    "\n",
-    "black = (45, 45, 45)\n",
-    "teal = (0, 128, 128)\n",
-    "gray = (55, 55, 55)\n",
-    "red = (178, 34, 34)\n",
-    "yellow = (204, 204, 102)\n",
-    "orange = (255, 140, 0)\n",
-    "\n",
-    "screen = pygame.display.set_mode([WIDTH, HEIGHT])\n",
-    "pygame.display.set_caption('Machine Learning - Beat Maker')\n",
-    "label_font = pygame.font.Font('freesansbold.ttf', 14)\n",
-    "\n",
-    "# ################## exchangeable variables\n",
-    "fps = 60\n",
-    "bpm = 240\n",
-    "beats = 6\n",
-    "instruments = 6\n",
-    "\n",
-    "boxes = []\n",
-    "beats_data = beats\n",
-    "timer = pygame.time.Clock()\n",
-    "clicked = [[-1 for _ in range(beats)] for _ in range(instruments)]\n",
-    "playing = True\n",
-    "active_length = 0\n",
-    "active_beat = 1\n",
-    "beat_changed = True\n",
-    "db_data = \"DataAnalytics_BeatMaker.db\"\n",
-    "db_machine = \"MachineLearning_BeatMaker.db\"\n",
-    "\n",
-    "# ################## loading sounds\n",
-    "hi_hat = mixer.Sound('sounds\\hi hat.wav')\n",
-    "snare = mixer.Sound('sounds\\snare.wav')\n",
-    "kick = mixer.Sound('sounds\\kick.wav')\n",
-    "crash = mixer.Sound('sounds\\crash.wav')\n",
-    "clap = mixer.Sound('sounds\\clap.wav')\n",
-    "tom = mixer.Sound('sounds\\\\tom.wav')\n",
-    "\n",
-    "\n",
-    "# ################## playing sounds\n",
-    "def play_notes():\n",
-    "    for i in range(len(clicked)):\n",
-    "        if clicked[i][active_beat] == 1:\n",
-    "            if i == 0:\n",
-    "                hi_hat.play()\n",
-    "            if i == 1:\n",
-    "                snare.play()\n",
-    "            if i == 2:\n",
-    "                kick.play()\n",
-    "            if i == 3:\n",
-    "                crash.play()\n",
-    "            if i == 4:\n",
-    "                clap.play()\n",
-    "            if i == 5:\n",
-    "                tom.play()\n",
-    "\n",
-    "\n",
-    "# ############################################## to the database\n",
-    "def crt_db():\n",
-    "    conn = sqlite3.connect(db_data)\n",
-    "    cursor = conn.cursor()\n",
-    "    with conn:\n",
-    "        cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS BeatMaker \n",
-    "        (time numeric, fps integer, \n",
-    "        hi_hat integer, snare integer, kick integer, crash integer, clap integer, tom integer, \n",
-    "        beats integer)\"\"\")\n",
-    "    for i in range(beats):\n",
-    "        with conn:\n",
-    "            cursor.execute(f\"INSERT INTO BeatMaker VALUES (datetime('now'),{fps}, \"\n",
-    "                           f\"{clicked[0][i]}, {clicked[1][i]}, {clicked[2][i]}, {clicked[3][i]}, \"\n",
-    "                           f\"{clicked[4][i]}, {clicked[5][i]}, {beats_data})\")\n",
-    "\n",
-    "\n",
-    "# ############################################## layout\n",
-    "def draw_grid(clicks, beat):\n",
-    "    boxes = []\n",
-    "    hi_hat_text = label_font.render('Hit hat (dvigubos lėkštės)', True, teal)\n",
-    "    screen.blit(hi_hat_text, (15, 42))\n",
-    "    snare_text = label_font.render('Snare (karinis būgnas)', True, teal)\n",
-    "    screen.blit(snare_text, (15, 142))\n",
-    "    kick_text = label_font.render('Kick (būgnas su pedalu)', True, teal)\n",
-    "    screen.blit(kick_text, (15, 242))\n",
-    "    crash_text = label_font.render('Crash (daužomas būgnas)', True, teal)\n",
-    "    screen.blit(crash_text, (15, 342))\n",
-    "    clap_text = label_font.render('Clap (lėkštės)', True, teal)\n",
-    "    screen.blit(clap_text, (15, 442))\n",
-    "    tom_text = label_font.render('Tom (didelis būgnas)', True, teal)\n",
-    "    screen.blit(tom_text, (15, 542))\n",
-    "    for i in range(instruments):\n",
-    "        pygame.draw.line(screen, gray, (0, (i * 100) + 100), (200, (i * 100) + 100), 3)\n",
-    "    for i in range(beats):\n",
-    "        for j in range(instruments):\n",
-    "            if clicks[j][i] == -1:\n",
-    "                color = gray\n",
-    "            else:\n",
-    "                color = red\n",
-    "            rect = pygame.draw.rect(screen, color,\n",
-    "                                    [i * ((WIDTH - 200) // beats) + 205, (j * 100) + 5, ((WIDTH - 200) // beats) - 10,\n",
-    "                                     ((HEIGHT - 200) // instruments)], 0, 3)\n",
-    "            pygame.draw.rect(screen, yellow,\n",
-    "                             [i * ((WIDTH - 200) // beats) + 200, (j * 100), ((WIDTH - 200) // beats),\n",
-    "                              ((HEIGHT - 200) // instruments)], 5, 5)\n",
-    "            pygame.draw.rect(screen, black,\n",
-    "                             [i * ((WIDTH - 200) // beats) + 200, (j * 100), ((WIDTH - 200) // beats),\n",
-    "                              ((HEIGHT - 200) // instruments)], 2, 5)\n",
-    "            boxes.append((rect, (i, j)))\n",
-    "            pygame.draw.rect(screen, orange,\n",
-    "                             [beat * ((WIDTH - 200) // beats) + 200, 0, ((WIDTH - 200) // beats), instruments * 100],\n",
-    "                             5, 3)\n",
-    "    return boxes\n",
-    "\n",
-    "\n",
-    "# ############################################## engine\n",
-    "run = True\n",
-    "while run:\n",
-    "    timer.tick(fps)\n",
-    "    screen.fill(black)\n",
-    "    boxes = draw_grid(clicked, active_beat)\n",
-    "    if beat_changed:\n",
-    "        play_notes()\n",
-    "        beat_changed = False\n",
-    "    for event in pygame.event.get():\n",
-    "        if event.type == pygame.QUIT:\n",
-    "            run = False\n",
-    "        if event.type == pygame.MOUSEBUTTONDOWN:\n",
-    "            for i in range(len(boxes)):\n",
-    "                if boxes[i][0].collidepoint(event.pos):\n",
-    "                    coords = boxes[i][1]\n",
-    "                    clicked[coords[1]][coords[0]] *= -1\n",
-    "    beat_length = 3600 // bpm\n",
-    "    if playing:\n",
-    "        if active_length < beat_length:\n",
-    "            active_length += 1\n",
-    "        else:\n",
-    "            active_length = 0\n",
-    "            if active_beat < beats - 1:\n",
-    "                active_beat += 1\n",
-    "                beat_changed = True\n",
-    "            else:\n",
-    "                active_beat = 0\n",
-    "                beat_changed = True\n",
-    "    pygame.display.flip()\n",
-    "pygame.quit()\n",
-    "crt_db()\n"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9378393e-ba07-4b17-a169-dc2e1d5bbcc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "066306b6-e1c9-4d6f-a183-72c86d637581",
+   "id": "1c6ecd5b-b41a-4346-825c-f88bae6e0052",
    "metadata": {},
    "outputs": [],
    "source": []
